tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/set_host_header_multi_destination/tproxy/to_tproxy/_test_context/VirtualService.1995370236.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - tproxy
  http:
  - route:
    - destination:
        host: tproxy
      headers:
        request:
          set:
            Host: dest-authority
      weight: 50
    - destination:
        host: tproxy
      headers:
        request:
          set:
            Host: dest-authority
      weight: 50
